gatekeeper/constraints/deployment-replica-limit.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDeploymentReplicaLimit
metadata:
  name: deployment-replica-limit
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    namespaces:
    - demo
  parameters:
    maxReplicas: 5
